--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <div class="top-wrapper">
     <div class="container">
       <h1>LEARN TO CODE.<br>LEARN TO BE CREATIVE.</h1>
-      <p>Progateはオンラインプログラミング学習サービスです。<br>初心者にもやさしいスライドとレッスンで、ウェブサービスを作りながらプログラミングを学んでいきましょう。</p>
+      <p>Progateはオンラインプログラミング学習サービスだよ！<br>初心者にもやさしいスライドとレッスンで、ウェブサービスを作りながらプログラミングを学んでいこ！</p>
     <div class="btn-wrapper">  
       <a href=# class="btn signup">新規登録はこちら</a>
       <p>or</p>
@@ -76,7 +76,7 @@
   <div class="message-wrapper">
     <div class="container">
       <div class="message-heading">
-        <h2>さぁ、あなたもProgateでプログラミングを学んでみませんか?</h2>
+        <h2>さぁ、あなたも宮近とProgateでプログラミングを学んでみませんか?</h2>
         <h3>Let's learn to code, learn to be creative!</h3>
       </div>
       <a href="#" class="btn-message">さっそく開発する</a>
